# openeu-backend

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Dockerfile.draft  README.md  docker-compose.yml  healthcheck.py  main.py  meetingCalendarScraping.py  openapi.yaml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  reset.sh  scrapy.cfg  start_dev_env.sh  test_run_smart_alerts.py
.github/workflows/: deploy.yml  deploy_migrations.yml  docker-publish.yml  lint.yml  types.yml
app/: dependencies.py
app/api/: __init__.py  alerts.py  chat.py  countries.py  crawler.py  fail_scheduler.py  legislative_files.py  meetings.py  notifications.py  profile.py  routes.py  scheduler.py  subscriber.py  suggestions.py  test.py  topics.py
app/core/: alerts.py  auth.py  chat_utils.py  cohere_client.py  config.py  deepl_translator.py  email.py  extract_topics.py  file_extractor.py  jobs.py  legislation_utils.py  notify_job_failure.py  openai_client.py  pdf_extractor.py  relevant_legislatives.py  relevant_meetings.py  scheduling.py  supabase_client.py  table_metadata.py  vector_search.py
app/data_sources/: scraper_base.py  task_runner.py
app/models/: chat.py  legislative_file.py  meeting.py  notifications.py  person.py  profile.py  suggestion.py  topic.py  tweet.py  twitter_user.py
docs/: scheduling.md
eu_lawtracker_backup/: items.py  pipelines.py
eu_lawtracker_backup/backup_code/: lawtracker_backup.py
eu_lawtracker_backup/tests/: docker_compose.yml  test_selectors.py  test_spider_live.py
scripts/: embedding_cleanup.py  embedding_generator.py  meeting_cleanup.py  run_job.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20250513075000_add_tables.sql  20250518130344_create_missing_tables.sql  20250518130604_create_scheduled_job_runs_table.sql  20250518134103_create_meps_table.sql  20250520065108_mec-mep-meetings-tables.sql  20250520142058_test_migration_on_merge.sql  20250521130522_remote_schema.sql  20250521161000_create_view_v_meetings_final.sql  20250521170000_create_view_v_meetings_test.sql  20250522222845_add_weekly_agenda.sql  20250523073856_mec-meetings.sql  20250523131912_add_tables.sql  (+96 more)
test/: test_crawler.py  test_scraper_base_failure.py
(+107 files in other folders)
